fix: span name color turn to black when being hovered in dark mode

--- a/ui/src/views/dashboard/plugins/built-in/panel/trace/components/TraceDetail/TraceTimeline/SpanRow/SpanBarRow.css
+++ b/ui/src/views/dashboard/plugins/built-in/panel/trace/components/TraceDetail/TraceTimeline/SpanRow/SpanBarRow.css
@@ -97,10 +97,6 @@ limitations under the License.
     color: #808080;
   }
   
-  .span-name:hover > .endpoint-name {
-    color: #000;
-  }
-  
 
   .span-svc-name {
     padding: 0 0.25rem 0 0.5rem;
